Build docker from scratch to support more experimental Java options